add basic template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<html>
+<!-- TODO : remove the ".deleteme" extension from this filename -->
+<!-- TODO: Replace Mr. Miyamoto's name with yours -->
+<h1>The Portfolio of Jiajun Xi</h1>
+
+<h2>Projects</h2>
+
+<!-- TODO: Organize and add links to your P1 builds and P1 video demontration. -->
+<ul>
+<li><a href="https://c.tenor.com/veYBba8Ivr4AAAAC/zouzou-dog-confused-dog.gif">Project 1 : CSE Simulator (Unreal Engine)</a></li>
+</ul>
+
+<!-- TIP: keep this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
+</html>
