--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Organize and add links to your P1 builds and P1 video demontration. -->
 <ul>
-<li><a href="https://c.tenor.com/veYBba8Ivr4AAAAC/zouzou-dog-confused-dog.gif">Project 1 : CSE Simulator (Unreal Engine)</a></li>
+<li><a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Project 1 : CSE Simulator (Unreal Engine)</a></li>
 </ul>
 
 <!-- TIP: keep this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
