--- a/generic_1.html
+++ b/generic_1.html
@@ -39,7 +39,8 @@
 								Unreal Engine 5: we use Unreal Engine 5 as our coding platform to place object and set up interaction logic.	
 								Oculus Quest Pro: we use Oculus Quest Pro provided at UM XR Visualization Studio as our VR hardware. 
 								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab).
-								JIRA: we use JIRA as our project management system to distribute task and track progress.  
+								JIRA: we use JIRA as our project management system to distribute task and track progress. 
+								<a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a>
 							</p>
 						</div>
 					</section>
