--- a/generic_2.html
+++ b/generic_2.html
@@ -32,9 +32,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">P2: A2-GO!</h1>
-							<span class="image fit"><img src="images/p1.png" alt="" /></span>
+							<span class="image fit"><img src="images/p2.png" alt="" /></span>
 							<p>Description: 
-								Pokemon Go has been popular since its realease. 
+								Introducing A2-GO!. 
 							<p>Technical Components:
 								Unreal Engine 5: we use Unreal Engine 5 as our coding platform to place object and set up interaction logic.	
 								Oculus Quest Pro: we use Oculus Quest Pro provided at UM XR Visualization Studio as our VR hardware. 
