--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/p1.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Project 1</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/p2.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/p2.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Project 2</h2>
