--- a/generic_2.html
+++ b/generic_2.html
@@ -33,13 +33,16 @@
 						<div class="inner">
 							<h1 class="major">P2: A2-GO!</h1>
 							<span class="image fit"><img src="images/p2.png" alt="" /></span>
-							<p>Description: 
-								Introducing A2-GO!. 
-							<p>Technical Components:
-								Unreal Engine 5: we use Unreal Engine 5 as our coding platform to place object and set up interaction logic.	
-								Oculus Quest Pro: we use Oculus Quest Pro provided at UM XR Visualization Studio as our VR hardware. 
-								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab).
-								JIRA: we use JIRA as our project management system to distribute task and track progress.  
+							<p>
+								Description:
+								Introducing A2-GO!, an AR mobile phone game with features including navigating to Ann Arbor landmarks, buying, planting and selling virtual trees in the market, and fighting against the squirrels.
+							<p>
+								Technical Components: <br />
+								Unity: we use Unity as our coding platform to place object and set up interaction logic. <br />
+								XCode: we use XCode as our compilation software to install software on iPhone.
+								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab). <br />
+								JIRA: we use JIRA as our project management system to distribute task and track progress.<br />
+								<a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a>
 							</p>
 						</div>
 					</section>
