add new lines above link

--- a/generic_2.html
+++ b/generic_2.html
@@ -42,8 +42,9 @@
 								XCode: we use XCode as our compilation software to install software on iPhone.
 								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab). <br />
 								JIRA: we use JIRA as our project management system to distribute task and track progress.<br />
-								<a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a>
+								
 							</p>
+							<p><a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a></p>
 						</div>
 					</section>
 
