--- a/generic_1.html
+++ b/generic_1.html
@@ -40,8 +40,9 @@
 								Oculus Quest Pro: we use Oculus Quest Pro provided at UM XR Visualization Studio as our VR hardware. <br />
 								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab). <br />
 								JIRA: we use JIRA as our project management system to distribute task and track progress.<br /> 
-								<a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a>
+								
 							</p>
+							<p><a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a></p>
 						</div>
 					</section>
 
