update p2gold website

--- a/generic_2.html
+++ b/generic_2.html
@@ -44,7 +44,7 @@
 								JIRA: we use JIRA as our project management system to distribute task and track progress.<br />
 								
 							</p>
-							<p><a href="https://drive.google.com/file/d/1YL5CLpFdpl2vYbGteNVuoXpWWCkElz_L/view?usp=drive_link">Link</a></p>
+							<p><a href="https://drive.google.com/file/d/1UkAwWrUvFK_g8y4vFSUEvgHy0GiNEubM/view?usp=sharing">Link</a></p>
 						</div>
 					</section>
 
