--- a/generic_3.html
+++ b/generic_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>P3: Lingua AR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Extended Reality and Society</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic_3.html" class="active">P1</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,10 +31,20 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">P3: Lingua AR</h1>
+							<span class="image fit"><img src="images/p3.png" alt="" /></span>
+							<p>
+								Description:
+								Introducing Lingua AR, an AR mobile app that helps users learn a new language by translating objects in the real world.
+							<p>
+								Technical Components: <br />
+								Unity: we use Unity as our coding platform to place object and set up interaction logic. <br />
+								XCode: we use XCode as our compilation software to install software on iPhone.
+								Blend: we use Blend to adjust 3D model downloaded online (e.g. Sketchfab). <br />
+								JIRA: we use JIRA as our project management system to distribute task and track progress.<br />
+								
+							</p>
+							<p><a href="https://cedrus17.wixsite.com/ar-language-learning">Link</a></p>
 						</div>
 					</section>
 
