--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 3</h2>
-									<p>Not released yet.</p>
+									<p>Lingua AR</p>
+									<ul class="actions">
+										<li><a href="generic_3.html" class="button">Learn more</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
