--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/p3.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Project 3</h2>
